Correct test naming

--- a/dokka/removed-cache-benchmark/combined-results.html
+++ b/dokka/removed-cache-benchmark/combined-results.html
@@ -525,7 +525,7 @@
                 {
                     "definition": {
                         "name": "1.6.10.26-clean",
-                        "title": "#1 - rootCache removed",
+                        "title": "#1 removed (rootCache)",
                         "displayName": "using Gradle 6.8.3",
                         "buildTool": "Gradle 6.8.3",
                         "tasks": "clean dokkaHtmlMultiModule",
@@ -711,7 +711,7 @@
                 {
                     "definition": {
                         "name": "1.6.10.27-clean",
-                        "title": "#2 - lastClassSearch removed",
+                        "title": "#1 + #2 removed (rootCache + lastClassSearch)",
                         "displayName": "using Gradle 6.8.3",
                         "buildTool": "Gradle 6.8.3",
                         "tasks": "clean dokkaHtmlMultiModule",
@@ -897,7 +897,7 @@
                 {
                     "definition": {
                         "name": "1.6.10.28-clean",
-                        "title": "#3 - packageCache removed",
+                        "title": "#1 + #2 + #3 removed (rootCache + lastClassSearch + packageCache)",
                         "displayName": "using Gradle 6.8.3",
                         "buildTool": "Gradle 6.8.3",
                         "tasks": "clean dokkaHtmlMultiModule",
